--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
-<html>
 
-<body>
-  <script src="./index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Clock</title>
+    <link rel="stylesheet" href="./style/main.scss">
+  </head>
+  <body>
+
+    <section class="clock">
+
+      <div class="circle">
+        <div class="hour"></div>
+        <div class="min"></div>
+        <div class="secs"></div>
+      </div>
+
+    </section>
+    
+    <script src="./index.js"></script>
 </body>
-
 </html>
