--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="clock">
 
       <div class="circle">
-        <div class="hour"></div>
+        <div class="hour" id="hour">g</div>
         <div class="min"></div>
-        <div class="secs"></div>
+        <div class="secs" id="secs"></div>
       </div>
 
     </section>
