--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <section class="clock">
 
       <div class="circle">
-        <div class="hour" id="hour">g</div>
-        <div class="min"></div>
+        <div class="hour" id="hour"></div>
+        <div class="min" id="min"></div>
         <div class="secs" id="secs"></div>
       </div>
 
